<resources>
    <string name="app_name">Popular Movies2</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_top_rated">Top Rated Movies</string>
    <string name="title_now_playing">Now Playing Movies</string>
    <string name="title_favourites">My Favourite Movies</string>
    <string name="title_details">Movie Details</string>
    <string name="title_search">Search Results</string>
    <string name="action_settings">Settings</string>
    <string name="action_sharing">Sharing</string>
    <string name="action_search">Search for movie title</string>
    <string name="action_refresh">Refresh data</string>

    <!-- Error message when there is no internet connectivity -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Text to display in the list when there are no movies -->
    <string name="no_movies">No movies found.</string>
    <string name="empty_favourites">There is no movie in the favourites list.</string>

    <!-- Strings for contentDescription -->
    <string name="movie_backdrop">movie backdrop</string>
    <string name="movie_poster">movie poster</string>

    <!-- Details UI Strings -->
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="empty_review">There is no review for this movie.</string>
    <string name="empty_video">There is no video for this movie.</string>
    <string name="favorites_add">Add to favourites:</string>
    <string name="favorites_added">Added as favourite:</string>

    <!-- Strings for the "list by" preference -->
    <string name="pref_label_list">List by</string>
    <string name="pref_key_list" translatable="false">list_by</string>
    <string name="pref_default_list" translatable="false">@string/pref_value_popular</string>

    <!-- Labels for "list by" preference -->
    <string name="pref_label_popular">Most popular</string>
    <string name="pref_label_top_rated">Top rated</string>
    <string name="pref_label_now_playing">Now playing</string>
    <string name="pref_label_favourites">Favourites</string>

    <!-- Values in SharedPreferences -->
    <string name="pref_value_popular" translatable="false">popular</string>
    <string name="pref_value_top_rated" translatable="false">top_rated</string>
    <string name="pref_value_now_playing" translatable="false">now_playing</string>
    <string name="pref_value_favourites" translatable="false">favourites</string>

    <!-- Strings for toast messages -->
    <string name="toast_removed_db">Movie removed from the favourites</string>
    <string name="toast_added_db">Movie added to the favourites</string>
</resources>
